feat: endpoint cost_center
